finish section two

--- a/starter/03-CSS-Fundamentals/challengt.html
+++ b/starter/03-CSS-Fundamentals/challengt.html
@@ -2,7 +2,7 @@
  * @Author: Shuyuan He u7355023@anu.edu.au
  * @Date: 2023-07-21 17:12:28
  * @LastEditors: Shuyuan He u7355023@anu.edu.au
- * @LastEditTime: 2023-07-22 17:00:56
+ * @LastEditTime: 2023-07-23 21:12:47
  * @FilePath: \02-HTML-Fundamentals\challengte.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -22,7 +22,16 @@
         <p><strong>$65</strong></p>
         <p class="not-em">Free Shipping</p>
         <p>Ready to dress up and down, these classic canvas Chucks are an everyday wardrobe staple.</p>
+        <p class="sale">sale</p>
         <a href="https://www.converse.com.au/" class="more-info">More information &rarr;</a>
+        <svg height="20">
+            <rect id="box0" x="0" y="0" width="20" height="20"/>
+            <rect id="box1" x="40" y="0" width="20" height="20"/>
+            <rect id="box2" x="80" y="0" width="20" height="20"/>
+            <rect id="box3" x="120" y="0" width="20" height="20"/>
+            <rect id="box4" x="160" y="0" width="20" height="20"/>
+            <rect id="box5" x="200" y="0" width="20" height="20"/>
+          </svg>
         <h3 class="details-title">Product details</h3>
         <ul class="details-list">
             <li>Lightweight, durable canvas sneaker</li>
