--- a/starter/04-CSS-Layouts/challenge.html
+++ b/starter/04-CSS-Layouts/challenge.html
@@ -2,7 +2,7 @@
  * @Author: Shuyuan He u7355023@anu.edu.au
  * @Date: 2023-07-21 17:12:28
  * @LastEditors: Shuyuan He u7355023@anu.edu.au
- * @LastEditTime: 2023-07-27 14:09:37
+ * @LastEditTime: 2023-07-29 14:50:14
  * @FilePath: \02-HTML-Fundamentals\challengte.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -18,10 +18,13 @@
  <div class="container">
     <article class="product">
         <h2>Converse Chuck Taylor All Star Top</h2>
-        <img class="product-img" src="/img/challenges.jpg" height="250" width="250"/>
+        <div class="cont">
+        <img class="product-img" src="img/challenges.jpg" height="250" width="250"/>
         <div class="left-box">
-            <p class="price"><strong>$65</strong></p>
-            <p class="not-em">Free Shipping</p>
+            <div class="product-price">
+                <p class="price"><strong>$65</strong></p>
+                <p class="not-em">Free Shipping</p>
+            </div>
             <p class="product-description">Ready to dress up and down, these classic canvas Chucks are an everyday wardrobe staple.</p>
             <p class="sale">sale</p>
             <a href="https://www.converse.com.au/" class="more-info">More information &rarr;</a>
@@ -41,6 +44,7 @@
                 <li>Lightly padded footbed for added comfort</li>
                 <li>Iconic Chuck Taylor ankle patch</li>
             </ul>
+        </div>
         </div>
             <button class="add-cart">Add to cart</button>
     </article>
