--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: Shuyuan He u7355023@anu.edu.au
+ * @Date: 2023-07-21 16:28:41
+ * @LastEditors: Shuyuan He u7355023@anu.edu.au
+ * @LastEditTime: 2023-07-30 14:53:14
+ * @FilePath: \starter\04-CSS-Layouts\css-grid.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -36,10 +44,31 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
+        /* display: grid; */
+        display: none;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: 1fr 1fr;
+
+        column-gap: 20px;
+        row-gap: 40px;
+
+        /* gap: 30px; */
+        column-gap: 10px;
+        row-gap: 40px;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+      
+      .el--2 {
+        grid-column: 2 / -1;
+        grid-row: 2;
       }
 
       .container--2 {
@@ -47,12 +76,15 @@
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
         width: 1000px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
       }
     </style>
   </head>
