--- a/starter/04-CSS-Layouts/flexbox.html
+++ b/starter/04-CSS-Layouts/flexbox.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: Shuyuan He u7355023@anu.edu.au
+ * @Date: 2023-07-21 16:28:41
+ * @LastEditors: Shuyuan He u7355023@anu.edu.au
+ * @LastEditTime: 2023-07-28 21:23:47
+ * @FilePath: \04-CSS-Layouts\flexbox.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +16,9 @@
     <style>
       .el--1 {
         background-color: blueviolet;
+        align-self: flex-start;
+        /* order: 2; */
+        /* flex-grow: 3; */
       }
       .el--2 {
         background-color: orangered;
@@ -21,9 +32,12 @@
       }
       .el--5 {
         background-color: palevioletred;
+        align-self: stretch;
+        /* order: 1; */
       }
       .el--6 {
         background-color: steelblue;
+        /* order: -1; */
       }
       .el--7 {
         background-color: yellow;
@@ -36,11 +50,28 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size:32px;
         margin: 40px;
 
         /* FLEXBOX */
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 10px;
       }
+      
+      .el {
+          /*
+          DEFAULTS:
+          flex-grow: 0;
+          flex-shrink: 1;
+          flex-basis: auto; */
+          
+          /* flex-basis: 200px;
+          flex-shrink: 0;
+          flex-grow: 1; */
+          flex: 0 0 200px;
+        }
     </style>
   </head>
   <body>
