--- a/starter/04-CSS-Layouts/challenge.html
+++ b/starter/04-CSS-Layouts/challenge.html
@@ -18,7 +18,7 @@
  <div class="container">
     <article class="product">
         <h2>Converse Chuck Taylor All Star Top</h2>
-        <div class="cont">
+<!--        <div class="cont">-->
         <img class="product-img" src="img/challenges.jpg" height="250" width="250"/>
         <div class="left-box">
             <div class="product-price">
@@ -45,7 +45,7 @@
                 <li>Iconic Chuck Taylor ankle patch</li>
             </ul>
         </div>
-        </div>
+<!--        </div>-->
             <button class="add-cart">Add to cart</button>
     </article>
  </div>
